Replace SearchBar widget by NucliaGlobalSearch widget

--- a/libs/search-widget/src/common/common-style.scss
+++ b/libs/search-widget/src/common/common-style.scss
@@ -47,6 +47,7 @@
   --rhythm-8: calc(var(--spacer) * 8); /*  8    unit -  64px */
   --rhythm-9: calc(var(--spacer) * 9); /*  9    unit -  72px */
   --rhythm-10: calc(var(--spacer) * 10); /*  10   unit -  80px */
+  --rhythm-11: calc(var(--spacer) * 11); /*  11   unit -  88px */
   --rhythm-12: calc(var(--spacer) * 12); /*  12   unit -  96px */
   --rhythm-14: calc(var(--spacer) * 14); /*  14   unit - 112px */
   --rhythm-16: calc(var(--spacer) * 16); /*  16   unit - 128px */
