--- a/libs/search-widget/src/common/paragraph-result/ParagraphResult.scss
+++ b/libs/search-widget/src/common/paragraph-result/ParagraphResult.scss
@@ -3,26 +3,15 @@
   align-items: start;
   display: flex;
 
-  .expander-button-container {
-    transition: transform var(--transition-superfast);
-    width: var(--expander-width);
-
-    &.expanded {
-      transform: rotate(90deg);
-    }
-  }
-
   .paragraph-result-container {
     display: flex;
     font-size: var(--font-size-medium);
     gap: var(--rhythm-1);
-    line-height: var(--rhythm-3);
+    line-height: var(--rhythm-2_5);
     transition: background-color var(--transition-superfast), color var(--transition-superfast);
     width: calc(100% - var(--expander-width));
 
     &:not(.stack) {
-      align-items: center;
-
       &.no-indicator {
         margin-left: calc(var(--rhythm-1) * -1);
         padding-left: var(--rhythm-1);
@@ -42,32 +31,14 @@
     }
 
     .paragraph-text {
+      display: -webkit-box;
+      overflow: hidden;
       overflow-wrap: break-word;
-    }
-
-    .indicator-container {
-      display: flex;
-      flex: 0 0 auto;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
     }
     .hidden {
       display: none;
-    }
-  }
-}
-
-@media (hover: hover) {
-  .sw-paragraph-result {
-    .paragraph-result-container:not(.stack) .paragraph-text {
-      padding-right: var(--rhythm-1_5);
-    }
-
-    .paragraph-result-container:not(.selected):not(.disabled):hover,
-    .paragraph-result-container:not(.selected):not(.disabled).hover {
-      background-color: var(--hover-background-color);
-    }
-
-    .paragraph-result-container:not(.stack) {
-      border-radius: var(--rhythm-1_5);
     }
   }
 }
