[sc-7008] Add account slug field in manager

--- a/apps/manager-v2/src/app/manage-accounts/account-details/configuration/configuration.component.html
+++ b/apps/manager-v2/src/app/manage-accounts/account-details/configuration/configuration.component.html
@@ -3,6 +3,7 @@
   [formGroup]="configForm"
   (ngSubmit)="save()">
   <pa-input formControlName="email">Email</pa-input>
+  <pa-input formControlName="slug">Slug</pa-input>
   <pa-select
     label="Zone"
     formControlName="zone"
