--- a/libs/common/src/lib/entities/entities.component.scss
+++ b/libs/common/src/lib/entities/entities.component.scss
@@ -85,6 +85,13 @@ $gap-family-selection: rhythm(7);
         .family-name {
           flex: 1 0 auto;
         }
+        .family-actions {
+          display: flex;
+          align-items: center;
+          pa-button {
+            height: rhythm(4);
+          }
+        }
       }
     }
   }
@@ -113,6 +120,23 @@ $gap-family-selection: rhythm(7);
         display: flex;
         gap: rhythm(1);
       }
+    }
+  }
+
+  .duplicate-of-popup {
+    display: flex;
+    flex-direction: column;
+
+    .entity-input {
+      border: none;
+      border-bottom: 1px solid $color-neutral-regular;
+      margin-bottom: rhythm(1);
+    }
+
+    .suggested-entities {
+      list-style: none;
+      margin: 0;
+      padding: 0;
     }
   }
 }
