--- a/libs/common/src/lib/entities/entities.component.html
+++ b/libs/common/src/lib/entities/entities.component.html
@@ -77,7 +77,7 @@
             paTooltip="ner-list.delete-entity-tooltip"
             [disabled]="selectedNer.length === 0"
             (click)="deleteEntities()">
-            {{ 'ner-list.add-duplicate-tooltip' | translate }}
+            {{ 'ner-list.delete-entity-tooltip' | translate }}
           </pa-button>
           <pa-button
             icon="arrows-related"
