--- a/libs/common/src/lib/entities/entities.component.html
+++ b/libs/common/src/lib/entities/entities.component.html
@@ -41,7 +41,7 @@
             </pa-button>
             <pa-button
               *ngIf="family.key === selectedFamily?.key"
-              aspect="basic"
+              aspect="solid"
               size="small"
               iconSize="small"
               icon="trash"
