--- a/libs/search-widget/src/widgets/search-widget/SearchBar.scss
+++ b/libs/search-widget/src/widgets/search-widget/SearchBar.scss
@@ -1,7 +1,7 @@
 @import "../../common/common-style.scss";
 
 .backdrop {
-  --top-spacing: var(--rhythm-2);
+  --top-spacing: var(--rhythm-8);
   --side-spacing: var(--rhythm-2);
 
   align-items: start;
@@ -14,7 +14,7 @@
   position: fixed;
   right: 0;
   top: 0;
-  z-index: 0;
+  z-index: 10000;
 }
 
 .search-container {
@@ -54,9 +54,15 @@
 }
 
 
+@media (max-width: 639px) {
+  .backdrop {
+    // add extra spacing on mobile to prevent "Do you have a question" block to come over the search results
+    max-height: calc(100vh - var(--top-spacing)*2 - var(--rhythm-2));
+  }
+}
 @media (min-width: 640px) {
   .backdrop {
-    --top-spacing: var(--rhythm-11);
+    --top-spacing: var(--rhythm-14);
   }
   .search-container {
     max-width: 784px;
