Center loading dots

--- a/libs/search-widget/src/common/spinner/LoadingDots.scss
+++ b/libs/search-widget/src/common/spinner/LoadingDots.scss
@@ -6,7 +6,7 @@
 
   /*Huge thanks to @tobiasahlin at http://tobiasahlin.com/spinkit/ */
   &:not(.small) {
-    margin: var(--rhythm-12) auto 0;
+    margin: var(--rhythm-12) auto;
     text-align: center;
   }
 
