[sc-6684] new widget option: targetNewTab

--- a/libs/common/src/lib/widgets/widget-generator.component.html
+++ b/libs/common/src/lib/widgets/widget-generator.component.html
@@ -118,8 +118,15 @@
           <pa-toggle
             labelOnRight
             help="stash.widgets.navigateToLink.help"
-            formControlName="navigateToLink">
+            formControlName="navigateToLink"
+            (valueChange)="updateTarget($event)">
             {{ 'stash.widgets.navigateToLink.label' | translate }}
+          </pa-toggle>
+          <pa-toggle
+            labelOnRight
+            help="stash.widgets.targetNewTab.help"
+            formControlName="targetNewTab">
+            {{ 'stash.widgets.targetNewTab.label' | translate }}
           </pa-toggle>
           <pa-toggle
             labelOnRight
