--- a/libs/search-widget/src/components/answer/Answer.scss
+++ b/libs/search-widget/src/components/answer/Answer.scss
@@ -9,6 +9,9 @@
     gap: var(--rhythm-1);
     margin-top: var(--rhythm-1);
 
+    .error {
+      color: var(--color-neutral-light);
+    }
     .text {
       flex: 1 1 auto;
     }
