--- a/apps/dashboard/src/app/account/account-nua/account-nua.component.html
+++ b/apps/dashboard/src/app/account/account-nua/account-nua.component.html
@@ -51,6 +51,7 @@
         </pa-button>
         <pa-button
           (click)="deleteClient(client.client_id)"
+          [attr.data-cy]="client.title + '-delete'"
           aspect="basic"
           icon="trash"
           size="small"
