update thumbnail fallback to use sistema’s glyphs instead of old icons
- remove old icons
- use sistema’s glyphs in thumbnail fallbacks

--- a/libs/search-widget/src/common/thumbnail/Thumbnail.scss
+++ b/libs/search-widget/src/common/thumbnail/Thumbnail.scss
@@ -12,11 +12,10 @@
   }
 
   &.thumbnail-fallback {
+    align-items: center;
+    color: var(--color-neutral-regular);
     height: var(--rhythm-22);
     justify-content: center;
-    img {
-      width: var(--rhythm-12);
-    }
   }
 
   .thumbnail-placeholder {
