[sc-6984] Implement new desktop UX

--- a/apps/desktop/src/app/connectors/connectors.component.html
+++ b/apps/desktop/src/app/connectors/connectors.component.html
@@ -1,119 +1,10 @@
-<div
-  *ngIf="(!fields && !form) || type === 'destinations'"
-  class="connectors-list">
+<h2>{{ 'upload.source.title' | translate }}</h2>
+<p>{{ 'upload.source.description' | translate }}</p>
+<div class="connectors-list">
   <nde-connector
-    *ngFor="let connector of connectors"
-    [selected]="selectedConnector?.id === connector.id"
+    *ngFor="let connector of (connectors | async) || []"
     [title]="connector.title"
     [logo]="connector.logo"
     [description]="connector.description"
     (selectConnector)="onSelectConnector(connector.id)"></nde-connector>
 </div>
-<form
-  *ngIf="!!fields && !!form"
-  [formGroup]="form"
-  qa="fields-form"
-  (ngSubmit)="validate()">
-  <ng-container *ngIf="type === 'sources'">
-    <div class="selected-source">
-      <img
-        [src]="selectedConnector.logo"
-        [alt]="selectedConnector.title" />
-      <div>{{ selectedConnector.title }}</div>
-    </div>
-    <div
-      formGroupName="quickAccess"
-      class="settings">
-      <div class="field">
-        <pa-input
-          formControlName="name"
-          [errorMessages]="validationMessages.name">
-          {{ 'upload.source.quick_access_name' | translate }}
-        </pa-input>
-      </div>
-    </div>
-  </ng-container>
-  <div
-    *ngFor="let field of fields"
-    formGroupName="fields"
-    class="field">
-    <pa-input
-      *ngIf="field.type === 'text'"
-      [help]="field.help | translate"
-      [placeholder]="field.placeholder"
-      [formControlName]="field.id">
-      {{ field.label | translate }}
-    </pa-input>
-    <pa-textarea
-      *ngIf="field.type === 'textarea'"
-      [help]="field.help | translate"
-      [formControlName]="field.id">
-      {{ field.label | translate }}
-    </pa-textarea>
-
-    <div
-      *ngIf="field.type === 'select'"
-      class="select-field-container">
-      <pa-select
-        [formControlName]="field.id"
-        [label]="field.label">
-        <pa-option
-          *ngFor="let option of field.options"
-          [disabled]="option.disabled"
-          [value]="option.value">
-          {{ option.label }}
-        </pa-option>
-      </pa-select>
-
-      <pa-button
-        *ngIf="field.canBeRefreshed"
-        icon="refresh"
-        aspect="basic"
-        [paTooltip]="'upload.refresh' | translate: { field: field.label }"
-        (click)="refreshField(field.id)">
-        {{ 'upload.refresh' | translate: { field: field.label } }}
-      </pa-button>
-    </div>
-  </div>
-  <div
-    *ngIf="selectedConnector.helpUrl"
-    class="help">
-    <pa-icon
-      size="small"
-      name="info"></pa-icon>
-    <a
-      [href]="selectedConnector.helpUrl"
-      (click)="goToDocumentation($event, selectedConnector.helpUrl)"
-      target="_blank"
-      rel="noopener noreferrer">
-      {{ 'upload.source.help' | translate: { source: selectedConnector.title } }}
-    </a>
-  </div>
-
-  <div
-    class="settings"
-    *ngIf="type === 'sources' && !selectedConnector?.permanentSyncOnly">
-    <div class="field">
-      <pa-checkbox formControlName="permanentSync">
-        {{ 'upload.source.permanent-sync' | translate }}
-      </pa-checkbox>
-    </div>
-  </div>
-
-  <div class="buttons">
-    <pa-button
-      *ngIf="!!fields && !!form"
-      qa="validate"
-      type="submit"
-      kind="primary"
-      [disabled]="form.invalid">
-      {{ (type === 'sources' ? 'generic.save_continue' : 'Upload') | translate }}
-    </pa-button>
-    <pa-button
-      qa="cancel"
-      aspect="basic"
-      (click)="cancel.next()">
-      {{ 'generic.cancel' | translate }}
-    </pa-button>
-  </div>
-</form>
