--- a/apps/desktop/src/app/main-layout/sidebar.component.html
+++ b/apps/desktop/src/app/main-layout/sidebar.component.html
@@ -5,7 +5,7 @@
       <ul>
         <li
           (click)="addSource()"
-          [class.active]="(!(currentSourceId | async) && (step | async) === 0) || (step | async) === 1">
+          [class.active]="!(currentSourceId | async) && ((step | async) === 0 || (step | async) === 1)">
           <pa-icon
             class="logo"
             name="plus"
