--- a/apps/desktop/src/app/connectors/connectors.component.scss
+++ b/apps/desktop/src/app/connectors/connectors.component.scss
@@ -1,63 +1,12 @@
 @import 'variables';
 
+h2 {
+  margin-bottom: 0;
+}
+
 .connectors-list {
   display: flex;
   flex-wrap: wrap;
   padding: rhythm(1);
   margin-bottom: rhythm(8);
-}
-
-form {
-  width: 100%;
-}
-
-.selected-source {
-  align-items: center;
-  display: flex;
-  font-size: $font-size-body-m;
-  font-weight: $font-weight-thin;
-  gap: rhythm(2);
-  margin: rhythm(4) 0;
-  img {
-    width: rhythm(6);
-  }
-}
-
-.field {
-  margin-bottom: rhythm(2);
-}
-
-.select-field-container {
-  display: flex;
-  margin-bottom: $margin-bottom-field;
-
-  pa-select {
-    flex: 1 0 auto;
-  }
-  pa-button {
-    margin-left: rhythm(2);
-  }
-}
-
-.help {
-  color: $color-neutral-regular;
-  display: flex;
-  gap: rhythm(1);
-  a {
-    color: inherit;
-    font-weight: $font-weight-regular;
-  }
-}
-
-.settings {
-  margin: rhythm(3) 0;
-}
-
-.buttons {
-  display: flex;
-  margin-top: rhythm(8);
-
-  pa-button {
-    margin: 0 rhythm(1);
-  }
 }
