[sc-7162]: prevent save & cancel buttons to be enabled by default
We already have the footer’s button being disabled when the form was invalid or pristine, but disabling the form by default and enabling it after getting the data was marking the form as touched, and so enabling the footer’s buttons.
So now, instead of disabling the form we hide it until we get the data to fill it.

--- a/libs/common/src/lib/resources/edit-resource/profile/profile.component.html
+++ b/libs/common/src/lib/resources/edit-resource/profile/profile.component.html
@@ -1,6 +1,8 @@
 <div class="main-container">
   <div class="scrollable-area with-footer with-right-panel">
+    <nsi-spinner *ngIf="!isFormReady"></nsi-spinner>
     <form
+      *ngIf="isFormReady"
       [formGroup]="form"
       (ngSubmit)="save()">
       <div>
